--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.3.2",
+    "react": "^17.0.1",
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-interactive": "^1.1.2",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4"
+    "react-slideshow-image": "^4.3.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
